BUGFIX - fixing overlap of nav links with main app start button
Nav links were overlapping with the start submission button on iOS due to issues with how Safari on iOS calculates vh units

--- a/bikespace_frontend/src/styles/global.scss
+++ b/bikespace_frontend/src/styles/global.scss
@@ -22,7 +22,7 @@ nav {
   left: 0;
   bottom: 0;
   width: 100%;
-  padding-bottom: 1.8rem;
+  padding-bottom: 1rem;
   ul {
     display: flex;
     flex-flow: row wrap;
